<resources>
    <string name="app_name">EatCleanApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Tên đăng nhập/Email</string>
    <string name="password">Mật khẩu</string>


    <string name="facebook_app_id">843496786546589</string>
    <string name="fb_login_protocol_scheme">fb843496786546589</string>
    <string name="title_activity_sub">SubActivity</string>

    <string name="no_have_account">Bạn chưa có tài khoản?</string>
    <string name="signup"><u>Đăng ký</u></string>
    <string name="signin">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="filter">Bộ lọc</string>
    <string name="request_permissions"><b>Eat Clean</b> muốn truy cập vào máy ảnh của bạn để có thể đăng tải hình ảnh.</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Không</string>
    <string name="cancel">Hủy</string>
    <string name="favorite">Yêu thích</string>
</resources>