<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.signin.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/login"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_gravity="center"
                    android:layout_height="70dp"
                    app:startIconDrawable="@drawable/ic_person_outline24"
                    android:layout_marginBottom="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:hint="@string/username"
                        android:id="@+id/signin_edtEmail"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:layout_height="70dp"
                    app:startIconDrawable="@drawable/ic_lock_24"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:textSize="20sp"
                        android:hint="@string/password"
                        android:id="@+id/signin_edtPassword"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="350dp"
                    android:padding="15dp"
                    android:text="@string/signin"
                    android:id="@+id/signin_btnSignIn"
                    android:textSize="20sp"
                    app:cornerRadius="30dp"
                    android:backgroundTint="@color/orange"/>
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="340dp"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp" />
                <TextView
                    android:id="@+id/txv_forgotpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@color/blue" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_have_account"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/signup"
                        android:id="@+id/signup"
                        android:textColor="@color/orange"
                        android:textSize="25sp"/>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>